# press

./: .gitignore  .pressignore  Cargo.toml  README.md  backup.txt  file_format.json
press.output/: README.txt  main.txt  pressed.txt
src/: cli_display.rs  console_capture.rs  deep_seek_api.rs  errors.rs  main.rs  xml_reader.rs
src/api/: client.rs  config.rs  errors.rs  mod.rs
src/cli/: args.rs  display.rs
src/commands/: mod.rs
src/errors/: mod.rs
src/file_processing/: mod.rs  reader.rs  writer.rs  xml_parser.rs
src/models/: code_assistant_response.rs  mod.rs  preprocessor_response.rs
src/utils/: config.rs  console_capture.rs  logger.rs  mod.rs
