[package]
name = "press"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
indicatif = "0.17.9"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
