[package]
name = "press"
version = "0.7.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
env_logger = "0.11.6"
indicatif = "0.17.9"
log = "0.4.22"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
winapi = { version = "0.3", features = ["consoleapi", "wincon", "processenv", "winbase"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
walkdir = "2.5.0"
